# rtsm

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  appimage_build.sh  build_install_dependency.sh  main.cpp  manual_appimage.sh  rtsm.desktop  rtsm_install_ubuntu.sh  rtsm_uninstall_ubuntu.sh
adapter/linux/: adapter.ixx  system_info_reader_linux.cpp  system_info_reader_linux.hpp  system_info_reader_linux.ixx
adapter/linux/detail/: nvml.ixx  system_info_reader_linux_detail.hpp  system_info_reader_linux_detail.ixx
adapter/mac/: system_info_reader_mac.cpp  system_info_reader_mac.hpp
adapter/window/: system_info_reader_window.cpp  system_info_reader_window.hpp
adapters/: adapterfetchmanager.cpp  adapterfetchmanager.h  adlinuxsysteminforeader.cpp  adlinuxsysteminforeader.h
doc/: .$rtsm.drawio.bkp  .$rtsm.drawio.dtmp  .$rtsm.drawio_1.dtmp  Overview architecture.drawio  rtsm.drawio
entities/: ecpuinfo.h  ediskinfo.h  egpuinfo.h  ememoryinfo.h  enetworkinfo.h  esysteminfo.h
entity/: cpu.hpp  cpu.ixx  disk.hpp  disk.ixx  entity.ixx  gpu.hpp  gpu.ixx  memory.hpp  memory.ixx  net.hpp  net.ixx
interfaces/: isysteminfologger.h  isysteminforeader.h
platform/: window_sticky.hpp
presentation/: psystemmonitor.cpp  psystemmonitor.h
presenter/: presenter.ixx  system_monitor.cpp  system_monitor.hpp  system_monitor_presenter.hpp  system_monitor_presenter.ixx  system_monitor_view_model.hpp  system_monitor_view_model.ixx
scheduler/: system_data_fetcher.cpp  system_data_fetcher.hpp  system_data_scheduler.cpp  system_data_scheduler.hpp  system_data_scheduler.ixx  system_fetch_manager.cpp  system_fetch_manager.hpp
tests/: CMakeLists.txt  adlinuxsysteminforeader_test.cpp  hello_test.cpp
ui/: Main.qml
ui/qt/: system_monitor_backend_fwd.hpp  system_monitor_qt.cpp  system_monitor_qt.hpp  system_monitor_view_qt.cpp  system_monitor_view_qt.hpp
ui/qt/qml/: Main.qml
use_case/: system_info_reader.hpp  system_monitor_interactor.cpp  system_monitor_interactor.hpp  system_monitor_interactor.ixx  usecase.ixx
use_case/ports/: system_info_reader.hpp  system_info_reader.ixx  system_monitor_input_boundary.hpp  system_monitor_input_boundary.ixx  system_monitor_output_boundary.hpp  system_monitor_output_boundary.ixx
usecases/: ucsysteminforeader.cc  ucsysteminforeader.h
util/: convert.ixx  io.ixx  parse.ixx  util.ixx
